<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlr"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/spacing_middle"
               android:layout_marginLeft="-10dp" >

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/lay"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text="@string/parson_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90" />

                    <TextView
                        android:id="@+id/item_result_TextView_name"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text="احمد"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="120dp">

                    <View
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@drawable/example"
                        />
                </RelativeLayout>

            </LinearLayout>

            <com.github.aakira.expandablelayout.ExpandableLinearLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay"
                android:orientation="vertical"
                app:ael_duration="400"
                app:ael_expanded="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text="@string/family_number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90"
                        />

                    <TextView
                        android:id="@+id/item_result_TextView_member"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text=" 7 "
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text="@string/local"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90"
                        />

                    <TextView
                        android:id="@+id/item_result_textView_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18dp"
                        android:text="کاکر ها"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/overlay_dark_90"
                        />

                </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help"
                        android:textColor="@color/overlay_dark_90"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:padding="@dimen/spacing_middle"
                        android:layout_marginRight="@dimen/spacing_middle"
                        android:layout_marginLeft="10dp"/>


                <TextView
                    android:id="@+id/item_result_TextView_helps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:padding="@dimen/spacing_middle"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/overlay_dark_90"
                    android:textSize="18dp" />


            </com.github.aakira.expandablelayout.ExpandableLinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
</LinearLayout>